--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<meta http-equiv="Refresh" content="2; url=dist/index.html" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/976bb2d67b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/dist/css/main.css" />
+    <title>James Nguyen Portfolio | Home Page</title>
+  </head>
+  <body id="bg-img">
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+
+      <nav class="menu">
+        <ul class="menu-nav">
+          <div class="nav-close">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+          </div>
+          <li class="nav-item current">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="/dist/about.html" class="nav-link">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a href="/dist/projects.html" class="nav-link">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a href="/dist/contact.html" class="nav-link">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Main Section -->
+
+    <main id="home">
+      <h1 class="lg-heading">
+        James <span class="text-secondary">Nguyen</span>
+      </h1>
+      <h2 class="sm-heading">Front End Web Developer</h2>
+      <div class="icons">
+        <a href="https://www.linkedin.com/in/james-nguyen-b49164177">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a href="https://github.com/JamesN96">
+          <i class="fab fa-github-square fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com/james.nguyen.984">
+          <i class="fab fa-facebook-square fa-2x"></i>
+        </a>
+      </div>
+      <button id="get-started">Click here to view more</button>
+    </main>
+
+    <script src="/dist/js/main.js"></script>
+  </body>
+</html>
