--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </h1>
       <h2 class="sm-heading">Front End Web Developer</h2>
       <div class="icons">
-        <a href="https://www.linkedin.com/in/james-nguyen-b49164177">
+        <a href="www.linkedin.com/in/jamesnguyenn">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="https://github.com/JamesN96">
